# GPlay3D

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  gplay3d-all.pro  newproject.sh
gameplay/: gameplay.pro
gameplay/res/shaders/: colored.frag  colored.io  colored.vert  font.frag  font.vert  lighting.frag  lighting.vert  physics.frag  physics.io  physics.vert  sprite.frag  sprite.io  sprite.vert  terrain.frag  terrain.io  terrain.vert  textured.frag  textured.io  textured.vert
gameplay/src/: Base.h  BoundingSphere.cpp  Control.cpp  DepthStencilTarget.cpp  Drawable.cpp  Effect.cpp  Effect.h  FrameBuffer.cpp  FrameBuffer.h  Game.cpp  Game.h  GlobalEvents.cpp  HeightField.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBatch.cpp  MeshBatch.h  MeshPart.cpp  MeshPart.h  Model.cpp  ParticleEmitter.cpp  Pass.cpp  Pass.h  PhysicsController.cpp  PhysicsVehicle.cpp  Platform.h  PlatformSDL2.cpp  Ray.cpp  Rectangle.cpp  RenderState.cpp  RenderState.h  SpriteBatch.cpp  Technique.cpp  Technique.h  Texture.cpp  Texture.h  VertexAttributeBinding.cpp  gameplay.h
gameplay/src/BGFX/: BGFXGpuProgram.cpp  BGFXGpuProgram.h  BGFXImGui.cpp  BGFXImGui.h  BGFXIndexBuffer.cpp  BGFXIndexBuffer.h  BGFXRenderer.cpp  BGFXRenderer.h  BGFXTexture.cpp  BGFXTexture.h  BGFXUniform.cpp  BGFXUniform.h  BGFXVertexBuffer.cpp  BGFXVertexBuffer.h  GeometryBuffer.cpp  GeometryBuffer.h  MemoryBuffer.cpp
gameplay/src/ParticleSpark/: SparkBaseRenderer.h  SparkGP3D.h  SparkParticleEmitter.cpp  SparkParticleEmitter.h  SparkQuadRenderer.cpp  SparkQuadRenderer.h  SparkUtility.cpp  SparkUtility.h
gameplay/src/ai/: AIAgent.cpp  AIController.cpp
gameplay/src/core/: FileSystem.cpp  FileSystem.h  Game.h  PlatformSDL2.cpp  Singleton.h
gplay3d/: CMakeLists.txt  gplay3d.pro
gplay3d/res/shaders/: debug.vert  font.vert  invalid.vert  particle.io  terrain.frag
gplay3d/res/shaders/common/: gameplay.sh
gplay3d/src/: gplay3d.h
gplay3d/src/core/: Base.h  DebugNew.cpp  FileSystem.cpp  FileWatcher.cpp  FileWatcher.h  Game.cpp  Game.h  Platform.h  PlatformSDL2.cpp  gplay3d-main-linux.cpp  gplay3d-main-windows.cpp
gplay3d/src/events/: EventManager.h
gplay3d/src/graphics/: Camera.cpp  Camera.h  Drawable.h  Effect.cpp  Font.cpp  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Light.cpp  Light.h  Material.cpp  Material.h  MaterialParameter.cpp  MaterialParameter.h  Mesh.h  MeshBatch.cpp  MeshPart.cpp  MeshPart.h  Model.cpp  Model.h  Node.cpp  Node.h  ParticleEmitter.cpp  ParticleEmitter.h  Pass.cpp  Pass.h  RenderState.cpp  RenderState.h  RenderTarget.cpp  Sprite.cpp  Sprite.h  SpriteBatch.cpp  Technique.cpp  Technique.h  Terrain.cpp  Terrain.h  TerrainPatch.cpp  TerrainPatch.h  Text.cpp  Text.h  (+6 more)
gplay3d/src/input/: Gamepad.cpp  JoystickControl.cpp
gplay3d/src/math/: BoundingBox.h  BoundingBox.inl  Quaternion.cpp  Quaternion.h  Ray.cpp  Rectangle.cpp  Transform.cpp  Transform.h
gplay3d/src/physics/: PhysicsController.cpp  PhysicsFixedConstraint.h  PhysicsRigidBody.inl
gplay3d/src/renderer/: BGFXGpuProgram.cpp  BGFXGpuProgram.h  BGFXImGui.cpp  BGFXRenderer.cpp  BGFXRenderer.h  BGFXTexture.cpp  BGFXTexture.h  BGFXUniform.h  BGFXVertexBuffer.h  MemoryBuffer.cpp
gplay3d/src/sparkparticles/: SparkParticleEmitter.cpp  SparkParticleEmitter.h  SparkQuadRenderer.cpp  SparkUtility.cpp  SparkUtility.h
gplay3d/src/ui/: CheckBox.h  Container.cpp  Control.h  FlowLayout.h  Form.cpp  Form.h  Layout.h  Slider.h  ThemeStyle.cpp
samples/: CMakeLists.txt
samples/browser/: CMakeLists.txt  sample-browser.pro
samples/browser/res/common/postprocess/: postprocess.io  postprocess.vert  postprocess_gaussianblur.frag  postprocess_grayscale.frag  postprocess_oldfilm.frag  postprocess_passthrough.frag  postprocess_pixelate.frag  postprocess_sepia.frag  postprocess_sobeledge.frag
samples/browser/res/common/sprites/: water2d.frag
samples/browser/res/common/terrain/: terrain.material
samples/browser/res/common/water/: watersample.frag  watersample.io  watersample.vert
samples/browser/src/: Audio3DSample.cpp  Audio3DSample.h  BillboardSample.cpp  BillboardSample.h  FirstPersonCamera.h  FontSample.cpp  FontSample.h  FormsSample.cpp  GamepadSample.cpp  GestureSample.cpp  GestureSample.h  Grid.h  InputSample.cpp  InputSample.h  LightSample.cpp  LightSample.h  MeshBatchSample.cpp  MeshBatchSample.h  MeshPrimitiveSample.cpp  MeshPrimitiveSample.h  ParticlesSample.cpp  ParticlesSample.h  PhysicsCollisionObjectSample.cpp  PhysicsCollisionObjectSample.h  PostProcessSample.cpp  PostProcessSample.h  Sample.h  SamplesGame.cpp  SamplesGame.h  SceneCreateSample.cpp  SceneCreateSample.h  SceneLoadSample.cpp  SceneLoadSample.h  SpriteBatchSample.cpp  SpriteBatchSample.h  SpriteSample.cpp  SpriteSample.h  TerrainSample.cpp  TerrainSample.h  TextureSample.cpp  (+5 more)
samples/character/: CMakeLists.txt  game.dds.config  sample-character.pro
samples/character/src/: CharacterGame.cpp  CharacterGame.h
samples/examples/: CMakeLists.txt  examples.pro  game.config
samples/examples/res/common/: box.material
samples/examples/src/: BaseExample.cpp  Cube.cpp  Cube.h  DeferredTest.cpp  DrawStress.cpp  DrawStress.h  DynamicMesh.cpp  DynamicMesh.h  EventSample.cpp  Example.h  FirstPersonCamera.h  ImGuiTest.cpp  ImGuiTest.h  Instancing.cpp  Instancing.h  LightsAndShadows.cpp  RenderToTexture.cpp  RenderToTexture.h  Renderer.cpp  SamplesGame.cpp  SamplesGame.h  ShaderReload.cpp  SparkDemo.cpp  SparkDemo.h  Sponza.cpp  Sponza.h  Transparency.cpp  bgfxBench.cpp
samples/examples/src/GpSpark/: SparkBaseRenderer.cpp  SparkBaseRenderer.h  SparkParticleEmitter.cpp  SparkParticleEmitter.h  SparkQuadRenderer.cpp  SparkQuadRenderer.h  SparkUtility.cpp  SparkUtility.h
samples/racer/: CMakeLists.txt  game.dds.config  sample-racer.pro
samples/racer/res/common/: racer.material
samples/racer/src/: RacerGame.cpp  RacerGame.h
samples/spaceship/: CMakeLists.txt  sample-spaceship.pro
samples/spaceship/src/: SpaceshipGame.cpp  SpaceshipGame.h
template/: TEMPLATE_PROJECT.pro
template/src/: TemplateGame.cpp  TemplateGame.h
tools/encoder/: gameplay-encoder.pro
(+118 files in other folders)
